<resources>
    <string name="app_name">CozySpot</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="location_button_description">Access my location</string>
    <string name="dialog_location_permission">We need your location to center the map. Please grant location permission.</string>
    <string name="dialog_approximate_location">Your location will be approximate. To enable precise location, go to app settings and grant Fine Location permission.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_settings">Go to Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_send_sms">Send result by Email</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_bookings">My Bookings</string>
    <string name="location">Location</string>
    <string name="dates">Dates</string>
    <string name="guests">Guests</string>
    <string name="price_per_night">Price per night</string>
    <string name="rating">Rating</string>
    <string name="no_house_found">No house found.</string>
    <string name="house_name">House name</string>
    <string name="date_guests">Date | Guests</string>
    <string name="price">Price</string>
    <string name="rating_0_5">Rating: 0/5</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="no_account_register">Do not have an account? Register now!</string>
    <string name="favorites">Favorites</string>
    <string name="messages">Messages</string>
    <string name="type_message">Type your message</string>
    <string name="send_message">Send message</string>
    <string name="user_name">User name</string>
    <string name="user_type">User type</string>
    <string name="history">History</string>
    <string name="favorite_house">Favorite house</string>
    <string name="center_map">Center on map</string>
    <string name="start_date">Start date</string>
    <string name="until">until</string>
    <string name="end_date">End date</string>
    <string name="host">Host:</string>
    <string name="house_image">House image</string>
    <string name="description">Description</string>
    <string name="ask_host">Ask the host a question:</string>
    <string name="type_question">Type your question</string>
    <string name="send">Send</string>
    <string name="book">Book</string>
    <string name="message">Message</string>
    <string name="search">Search</string>
    <string name="suggestions">Suggestions</string>
    <string name="top_10_houses">Top 10 best houses</string>
    <string name="no_booking_found">No bookings found.</string>
    <string name="booking_date">Booking date</string>
    <string name="total_price">Total price</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="fill_all_fields">Fill in all fields</string>
    <string name="email_already_registered">Email already registered</string>
    <string name="register_success">Registration successful!</string>
    <string name="no_search_criteria">No search criteria provided.</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="login_successful">Login successful!</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="database_preparation">Please wait... preparing the database</string>
    <string name="message_sent">Message sent!</string>
    <string name="select_recipient">Select recipient</string>
    <string name="write_message">Write a message</string>
    <string name="search_criteria_missing">No search criteria provided</string>
    <string name="location_required">Location is required</string>
    <string name="question_sent">Question sent to the host!</string>
    <string name="unable_to_get_location">Unable to get location</string>
    <string name="layout_view_error">Error: view not found in layout</string>
</resources>