<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="130dp"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="text"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextStartDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:focusable="false"
                android:hint="@string/start_date"
                android:inputType="none"
                android:padding="8dp"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/until"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextEndDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:focusable="false"
                android:hint="@string/end_date"
                android:inputType="none"
                android:padding="8dp"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/guests"
            android:inputType="number"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="20dp"
            android:text="@string/search"
            android:textColor="#040404" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="30dp"
            android:text="@string/suggestions"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewMelhores"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/top_10_houses"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTopRated"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    android:scrollbars="horizontal" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>