<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80C1FDB6"
    android:orientation="vertical"
    tools:context=".database.RegisterActivity">

    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="350dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="200dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:paddingTop="20dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextText9"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="287dp"
            android:layout_height="49dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#C1FDB6"
            android:text="@string/register" />

    </LinearLayout>
</LinearLayout>